k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wiz-app

  template:
    metadata:
      labels:
        app: wiz-app

    spec:
      serviceAccountName: wiz-app-sa

      containers:
      - name: wiz-app
        image: YOUR_ECR_IMAGE

        ports:
        - containerPort: 3000
