k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiz-app-service

spec:
  selector:
    app: wiz-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

  type: ClusterIP
